clase3/ingress-tls/web1.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 2
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: gcr.io/google-samples/hello-app:1.0
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: web1-svc
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 8080
      #nodePort: 32002
