clase3/ingress-tls/web2.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web2
spec:
  selector:
    matchLabels:
      app: web2
  replicas: 2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: web2
        image: gcr.io/google-samples/hello-app:2.0
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: web2-svc
spec:
  type: NodePort
  selector:
    app: web2
  ports:
    - port: 8080
      #nodePort: 32003
